tests/baselines/reference/structExtendsItself.errors.txt
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendsItself.ts(1,8): error TS2506: 'C' is referenced directly or indirectly in its own base expression.


==== tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendsItself.ts (1 errors) ====
    struct C extends C { } // error
           ~
!!! error TS2506: 'C' is referenced directly or indirectly in its own base expression.
    
    // struct D<T> extends D<T> { } //  error
    
    // struct E<T> extends E<string> { } // error